# Data_Platform_Scaffold

./: Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
compliance/delivery/: job_runner.py  sftp_client.py  signer.py
compliance/jobs/: psd2_reporting.sql
compliance/scripts/: run_export.py
compliance/sql/: export_transactions.sql
docker/airflow/: Dockerfile
docker/dbt/: Dockerfile
docker/services/: Dockerfile
feature_store/api/: main.py
feature_store/feast_repo/: entities.py  feature_store.yaml  features.py  materialize_to_online.py
ingestion/: requirements.txt
ingestion/api/: Dockerfile  pyproject.toml
ingestion/api/app/: __init__.py  auth.py  config.py  fraud_features_http.py  main.py  producer.py
ingestion/api/app/routers/: transactions.py
ingestion/api/app/schemas/: transaction.avsc  transaction_v1.avsc
ingestion/api/app/tests/: conftest.py  test_ingestion.py  test_transactions.py
ingestion/api/app/validation/: avro_validator.py
observability/great_expectations/: great_expectations.yml
observability/prometheus/: prometheus.yml
reverse_etl/: airbyte_trigger.py
reverse_etl/airbyte/: run_connection.py
reverse_etl/connectors/: crm_hubspot.py
samples/: seed_ingest.py
samples/data/: transactions_sample.json
security/: kms.py  tokenization.py
security/kms/: envelope.py
security/pii/: tokenize.py
security/policies/: rls_bigquery.sql  rls_snowflake.sql
security/rls/: rls_policies.sql
streaming/: __init__.py
streaming/consumers/: __init__.py
streaming/tests/: test_consumer_lib.py
(+33 files in other folders)
